[package]
name = "ctp_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
octocrab = "0.20.0"
tokio = { version = "1.28.0", features = ["full"] }
